--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-source-contentful": "^2.2.7",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.4.3",
+    "gatsby": "^2.20.23",
+    "gatsby-image": "^2.3.3",
+    "gatsby-plugin-manifest": "^2.3.4",
+    "gatsby-plugin-offline": "^3.1.3",
+    "gatsby-plugin-react-helmet": "^3.2.3",
+    "gatsby-plugin-sass": "^2.2.2",
+    "gatsby-plugin-sharp": "^2.5.5",
+    "gatsby-source-contentful": "^2.2.8",
+    "gatsby-source-filesystem": "^2.2.3",
+    "gatsby-transformer-remark": "^2.7.2",
+    "gatsby-transformer-sharp": "^2.4.5",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
