--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.20",
     "gatsby-transformer-sharp": "^2.5.7",
-    "node-sass": "^4.14.1",
+    "node-sass": "9.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
